Fixing horizontal scroll on homepage.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -291,7 +291,8 @@ body, html {
   height: 100%;
   background-position: center;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+  overflow: hidden; }
 
 .video-wrapper {
   position: fixed;
