--- a/sass/index.scss
+++ b/sass/index.scss
@@ -14,6 +14,7 @@ body, html {
   background-position:center;
   display:flex;
   flex-direction:column;
+  overflow: hidden;
 }
 .video-wrapper {
   position: fixed;
